# netket

./: .buildinfo  .clang-format  .flake8  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  CITATIONS.bib  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  Project.toml  README.md  __init__.py  covecov.yml  djaxrunlog-p0  environment.yml  genindex.html  hatch.toml  index.html  input_driver.py  labeled_representation_coset_filter_plan.md  netket.cc  netket.hh  netket.hpp  netket.rb  objects.inv  postBuild  ppa.py  prova.py  pylintrc  pyproject.toml  python_utils.py  (+6 more)
.github/: dependabot.yml
Benchmarks/: SR_solving.py  fast_autoreg.py  hamiltonian.py  irreps.py  irreps2.py  jax_jacobian.py  jax_sampler.py  layers.py  local_energy.py  py_rbm.py  qgt.py  qgt_gcnn.py  sampler.py
CMakeModules/: FindLAPACKE.cmake
Docs/: CustomGraph.md  README.md  build.py  build_docs.py  doc_diff.py  extract.py  format.py  make_all_docs.py  make_class_docs.py  parse.py  test_docs.py
Examples/: .gitignore  convergence.py  mc_convergence.py  save_state.py  thermalise_example.py
Graph/: abstract_graph.hh  abstract_graph.hpp  custom_graph.hh  custom_graph.hpp  distance.hh  distance.hpp  graph.cc  graph.hh  hypercube.hh
Hamiltonian/: abstract_hamiltonian.hh  bosonhubbard.hh  bosonhubbard.hpp  custom_hamiltonian.hh  custom_hamiltonian.hpp  hamiltonian.cc  hamiltonian.hh  hamiltonian.hpp  heisenberg.hh  ising.hh  local_operator.hh
Headers/: apply_license.sh  header.hh  header.py
Hilbert/: abstract_hilbert.hh  bosons.hh  custom_hilbert.hh  custom_hilbert.hpp  hilbert.cc  hilbert.hh  hilbert_index.hh  next_variation.hh  qubits.hh  qubits.hpp  spins.hh
Json/: json.hh  json_dumps.hh  json_helper.hh
Learning/: abstract_learning.hh  abstract_stepper.hh  ada_delta.hh  ada_delta.hpp  ada_max.hh  ada_max.hpp  ground_state.hh  ground_state.hpp  learning.cc  learning.hh  matrix_replacement.hh  rprop.hh  sgd.hh  sgd.hpp  sr.hh  stepper.cc  stepper.hh
Lookup/: lookup.hh  lookup.hpp
Machine/: abstract_machine.hh  abstract_machine.hpp  machine.hh  rbm_multival.hh  rbm_multival.hpp  rbm_spin.hh  rbm_spin_symm.hh
Machines/: machine.cc  machines.hh  rbm_multival.hh  rbm_spin.hh  rbm_spin_symm.hh
NetKet/: common_types.hpp  netket.cc  netket.hpp  pybind_support.hpp  pynetket.cc
Notes/: neural_density_matrix.lyx
Observable/: abstract_observable.hh  abstract_observable.hpp  custom_observable.hh  observable.cc  observable.hh  observable.hpp  observables.hh
Parallel/: MPIInterf.hh  parallel.hh  parallel.hpp
Sampler/: abstract_sampler.hh  abstract_sampler.hpp  metropolis.hh  metropolis_exchange.hh  metropolis_exchange_pt.hh  metropolis_hamiltonian.hh  metropolis_hamiltonian.hpp  metropolis_hamiltonian_pt.hh  metropolis_hamiltonian_pt.hpp  metropolis_hop.hh  metropolis_local.hh  metropolis_local_pt.hh  metropolis_local_pt.hpp  sampler.cc  sampler.hh  sampler.hpp
Sources/: common_types.hpp  config.hpp  netket.hpp  pynetket.cc
Stats/: binning.hh  obs_manager.hh  obs_manager.hpp  onlinestat.hh  stats.hh
Test/: CMakeLists.txt  common.py  conftest.py  test_models.py  unit-tests.cc
Test/Callbacks/: test_callbacks.py
Test/Driver/: test_steadystate.py
Test/Dynamics/: test_dynamics.py  unit-timeevolution.cpp
Test/Graph/: graph_input_tests.hh  graph_input_tests.hpp  test_graph.py  unit-graph.cc
Test/GroundState/: exact_diagonalization_input_tests.hpp  test_groundstate.py  test_vmc.py  unit-exact-diagonalization.cc
Test/Hamiltonian/: hamiltonian_input_tests.hh  hamiltonian_input_tests.hpp  unit-hamiltonian.cc  unit-matrixwrapper.cc
Test/Hilbert/: hilbert_input_tests.hh  hilbert_input_tests.hpp  test_hilbert.py  unit-hilbert.cc
Test/Input_Driver/: unit-input_driver.py  unit_input_driver.py
Test/Legacy/Callbacks/: test_callbacks.py
Test/Legacy/Dynamics/: test_dynamics.py
Test/Legacy/GroundState/: test_groundstate.py  test_legacy_vmc.py  test_vmc.py
Test/Legacy/MPI/: test_legacy_mpi_setup.py  test_legacy_stats_ops.py
Test/Legacy/Machine/: test_machine.py
Test/Legacy/Operator/: test_der_local_operator.py  test_legacy_liouvillian.py  test_legacy_local_operator.py  test_operator.py
Test/Legacy/Optimizer/: test_sr.py  test_sr_onthefly.py
Test/Legacy/Sampler/: test_legacy_sampler.py
Test/Legacy/Stats/: test_legacy_stats.py  test_stats.py
Test/Legacy/SteadyState/: test_steadystate.py
Test/Legacy/Utils/: test_legacy_utils.py
Test/Logging/: test_state_log.py
Test/MPI/: test_mpi_setup.py  test_mpi_utils.py  test_stats_ops.py
Test/Machine/: jax_wrapper.py  layer_input_tests.hpp  machine_input_tests.hh  machine_input_tests.hpp  rbm.py  test_machine.py  unit-activation.cc  unit-layer.cc  unit-machine.cc
Test/Models/: test_autoreg.py  test_jastrow.py  test_mps.py  test_nn.py  test_rbm.py
Test/NetKet_Tools/: unit-input_driver.py
Test/Observable/: observable_input_tests.hh  observable_input_tests.hpp  unit-matrixwrapper.cc  unit-observable.cc
Test/Operator/: __init__.py  test_der_local_operator.py  test_lindblad.py  test_liouvillian.py  test_local_operator.py  test_operator.py
Test/Optimizer/: optimizer_input_tests.hpp  test_qgt_itersolve.py  test_qgt_logic.py  test_sr.py  test_sr_itersolve.py  test_sr_logic.py  test_sr_onthefly.py  test_sr_onthefly_logic.py  unit-optimizers.cc
Test/Sampler/: conftest.py  sampler_input_tests.hh  sampler_input_tests.hpp  test_autoreg.py  test_sampler.py  unit-sampler.cc
Test/Stats/: mpi_test_stats.py  test_stats.py  unit-stats.cc
Test/SteadyState/: test_steadystate.py
Test/UnitaryDynamics/: unit-timeevolution.cpp
Test/UnitaryTimeEvolution/: unit-timeevolution.cpp  unit-timepropagator.cpp
Test/Utils/: test_group.py  test_history.py  test_struct.py  test_utils.py  test_wrapped_apply_fun.py  unit-utils.cpp
Test/Variational/: test_autoreg.py  test_experimental.py  test_variational.py  test_variational_mixed.py
Test/nktools/: unit-nktools.py
Test_MPI/: test_mpi.py  test_stats.py
Tutorials/: .gitignore  README  (+13 more)
(+3286 files in other folders)
